--- a/07.buttonGroup.html
+++ b/07.buttonGroup.html
@@ -100,7 +100,7 @@
         <button type="button" class="btn btn-secondary">2</button>
 
         <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
+            <button id="btnGroupDrop1" cdtype="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
                 Dropdown
             </button>
