--- a/08.forms2.html
+++ b/08.forms2.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-        <title>Bootstrap Example</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-            crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-    </head>
+    <title>Bootstrap Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</head>
+
 <body>
 
-    <form action="" class="need-validation" novalidate="novalidate">
+    <form action="" class="needs-validation" novalidate>
         <div class="form-row">
             <div class="col-md-4 mb-3">
                 <label for="validationCustom1">Primeiro Nome</label>
-                <input type="text" class="form-control" id="validationCustom1" placeholder="Primeiro nome" required="required">
+                <input type="text" class="form-control" id="validationCustom1" placeholder="Primeiro nome" required>
                 <div class="invalid-feedback">Informe um primeiro nome</div>
             </div>
             <div class="col-md-4 mb-3">
                 <label for="validationCustom2">Sobrenome</label>
-                <input type="text" class="form-control" id="validationCustom2" placeholder="Sobrenome" required="required">
+                <input type="text" class="form-control" id="validationCustom2" placeholder="Sobrenome" required>
                 <div class="invalid-feedback">Informe um sobrenome</div>
             </div>
             <div class="col-md-4 mb-3">
@@ -33,13 +35,58 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupPrepend">@</span>
                     </div>
+                    <input type="text" class="form-control" placeholder="Nome de usuário" aria-describedby="inputGroupPrepend" required id="validationCustom3">
                 </div>
-                <div class="invalid-feedback"></div>
+                <div class="invalid-feedback">Inform um nome de usuário</div>
             </div>
         </div>
-        <div class="form-row"></div>
-        <div class="form-group"></div>
+        <div class="form-row">
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom4">Cidade</label>
+                <input type="text" class="form-control" id="validationCustom4" placeholder="Cidade" required>
+                <div class="invalid-feedback">Por favor informe uma cidade</div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom5">Estado</label>
+                <input type="text" class="form-control" id="validationCustom5" placeholder="Estado" required>
+                <div class="invalid-feedback">Por favor informe um estado</div>
+            </div>
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom6">CEP</label>
+                <input type="text" class="form-control" id="validationCustom6" placeholder="CEP" required>
+                <div class="invalid-feedback">Por favor informe um CEP</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" value="" required id="invalidCheck">
+                <label for="invalidCheck" class="form-check-label">Concordo com termos e condições</label>
+                <div class="invalid-feedback">Por favor, aceite os termos e condições para continuar</div>
+            </div>
+        </div>
+        <button class="btn btn-primary" type="submit">Enviar formulário</button>
     </form>
-    
+
+<script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict';
+            window.addEventListener('load', function () {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();
+    </script>
 </body>
+
 </html>
