--- a/09.navs.html
+++ b/09.navs.html
@@ -35,10 +35,11 @@
                 aria-describedby="basic-addon2">
             <input class="form-control" type="number" id="replyNumber" min="0" step="1" data-bind="value:replyNumber"
                 placeholder="Quantidade" />
-                <div class="input-group-append">
+            <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button">Incluir</button>
             </div>
         </div>
+
 
         <datalist id="browsers">
             <option value="Abacate">
@@ -117,8 +118,4 @@
             <option value="Uva red globe">
             <option value="Uva rosada">
             <option value="Uva Rubi">
-            <option value="Uva sem semente" </datalist> </form> 
-
-</body>
-
-</html>
+            <option value="Uva sem semente" </datalist> </form> </body> </html>
